# fpg

./: CMakeLists.txt  LICENSE  NOTES  README.md
benchmarks/gfx900/hip-1.5.18353/: reduction-grid-1630mhz.csv
benchmarks/gfx900/rocm-1.9.211/: reduction-grid-1630mhz.csv
benchmarks/gfx900/rocm-2.0.89/: nbody-hip-hc.ods  nbody.csv  results.csv  results.db  results.json
examples/: CMakeLists.txt  main.cpp  mock-main.cpp
examples/common/: common.h
examples/n-body/: CMakeLists.txt
examples/n-body/cuda/: .vimrc  (+2 more)
examples/n-body/rocm/hc/: CMakeLists.txt  nbody.cpp
examples/reduce/: Makefile  Makefile.hip  Makefile.hip.nvcc  benchmark.cpp  benchmark.h  implementation.h  result.h
notes/: Implementierungen
opencl/: common.h  saxpy.cpp
paper/: .gitignore  Makefile  amd.tex  anhang.tex  bibliography.bib  einleitung.tex  ergebnisse.tex  fazit.tex  glossar.tex  main.tex  methoden.tex  nvidia.tex  oekosysteme.tex  vergleich.tex  zihpub.cls
paper/data/: bandwidth.csv  flops.csv  nbody-amd-tilesize-524288.csv  nbody-amd-tilesize-65536.csv  nbody-amd-tilesize-8192.csv  nbody-amd-unroll-524288.csv  nbody-amd-unroll-65536.csv  nbody-amd-unroll-8192.csv  nbody-amd.csv  nbody-nvidia-tilesize-524288.csv  nbody-nvidia-tilesize-65536.csv  nbody-nvidia-tilesize-8192.csv  nbody-nvidia-unroll-524288.csv  nbody-nvidia-unroll-65536.csv  nbody-nvidia-unroll-8192.csv  nbody-nvidia.csv  reduce-amd-hc-vega64.csv  reduce-amd-hip-vega64.csv  reduce-amd-vega64.csv  reduce-nvidia-cuda-k20x.csv  reduce-nvidia-hip-k20x.csv  reduce-nvidia-k20x.csv  reduce-nvidia-sycl-k20x.csv  zcopy-amd-hc-vega64-rw.csv  zcopy-amd-hc-vega64-w.csv  zcopy-amd-hip-vega64-rw.csv  zcopy-amd-hip-vega64-w.csv  zcopy-amd-vega64-peak.csv  zcopy-nvidia-cuda-k20x-generic-rw.csv  zcopy-nvidia-cuda-k20x-generic-w.csv  zcopy-nvidia-cuda-k20x-optimized-rw.csv  zcopy-nvidia-cuda-k20x-optimized-w.csv  zcopy-nvidia-hip-k20x-generic-rw.csv  zcopy-nvidia-hip-k20x-generic-w.csv  zcopy-nvidia-hip-k20x-optimized-rw.csv  zcopy-nvidia-hip-k20x-optimized-w.csv  zcopy-nvidia-k20x-peak.csv  zcopy-nvidia-sycl-k20x-generic-rw.csv  zcopy-nvidia-sycl-k20x-generic-w.csv  zcopy-nvidia-sycl-k20x-optimized-rw.csv  (+1 more)
presentation/: Redeskript.odt  presentation.odp
rocm/C++AMP/: device_query.cpp  saxpy.cpp
templates/opencl/: .syntastic_cpp_config  .vimrc
tools/: extractkernel
(+76 files in other folders)
